test/types/range/lydia/badRange-string-multi.good
badRange-string-multi.chpl:1: In function 'main':
badRange-string-multi.chpl:2: error: Range bounds must be integers of compatible types in param for-loops
